changing the title

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>my website</title>
+    <title>My Website</title>
 </head>
 <body>
-    <h1>Hi this is jus a testing</h1>
+    <h1>Blog Posts</h1>
 </body>
 </html>
