--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css"/>
     <title>My Website</title>
 </head>
 <body>
-    <h1>Blog Posts</h1>
+    <nav>
+        <li>About</li>
+        <li>Blogs</li>
+        <li>Contacts</li>
+    </nav>
+    <div id="main">
+        
+    </div>
 </body>
 </html>
